# midenid-contracts

./: .gitignore  Cargo.toml
masm/accounts/: naming_discount.masm
masm/notes/: initialize_naming.masm  register_name.masm
src/: accounts.rs  client.rs  deploy.rs  main.rs  notes.rs  scripts.rs  transaction.rs
tests/: init_registry_test.rs  naming_referral_tests.rs  naming_register_tests.rs  test_utils.rs
