[package]
name = "midenname-contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
miden-client = { version = "0.12", features = ["testing", "tonic"] }
miden-lib = { version = "0.12", default-features = false }
miden-objects = { version = "0.12", default-features = false, features = ["testing"] }
miden-crypto = { version = "0.18.2", features = ["executable"] }
miden-assembly = "0.19.1"
miden-testing = "0.12"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"
miden-client-tools = "0.2.4"
miden-client-sqlite-store = { version = "0.12", package = "miden-client-sqlite-store" }
chrono = "0.4"
anyhow = "1"
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive"] }